vlib/v/parser/tests/register_ierror_interface.vv
interface IError {
	foo() string
}

fn main() {
	println('Hello World')
}
